--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,11 @@ body {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
 
+#image1 {
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+}
+
 .picture-gallery h2{
     grid-column: 1/4;
     grid-row: 1;
@@ -362,7 +367,7 @@ nav a:focus {
     flex-grow: 0;
   }
 
-  #foot-text{
+  .foot-text{
     color: #3D3D3D;
     text-decoration: none;
     font-family: Apple;
@@ -373,7 +378,7 @@ nav a:focus {
     transition-timing-function: ease-in-out;
     transition-duration: 200ms;
   }
-  #foot-text:hover{
+  .foot-text:hover{
     opacity: 0.5;
   }
 
@@ -400,7 +405,7 @@ nav a:focus {
     font-family: Inter-Bold;
   }
 
-#foot-pro{
+.foot-pro{
     color: #3D3D3D;
     
     flex: none;
@@ -661,6 +666,33 @@ footer li{
 .images{
     display:inline;
 }
+
+.picture-gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.25fr 1fr 1fr 1fr;
+    padding: 25px;
+    margin: 20px;
+    row-gap: 20px;
+    column-gap: 20px;
+}
+
+.picture-gallery img{
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+#image1 {
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+}
+
+.picture-gallery h2{
+    grid-column: 1/4;
+    grid-row: 1;
+}
+
 
 /* NAV BAR */
 header{
@@ -1099,7 +1131,7 @@ footer li{
     flex-grow: 0;
   }
 
-  #foot-text{
+  .foot-text{
     color: #3D3D3D;
     text-decoration: none;
     font-family: Apple;
@@ -1110,7 +1142,7 @@ footer li{
     transition-timing-function: ease-in-out;
     transition-duration: 200ms;
   }
-  #foot-text:hover{
+  .foot-text:hover{
     opacity: 0.5;
   }
 
@@ -1137,7 +1169,7 @@ footer li{
     font-family: Inter-Bold;
   }
 
-#foot-pro{
+.foot-pro{
     color: #3D3D3D;
     
     flex: none;
@@ -1296,7 +1328,7 @@ header{
     flex-grow: 0;
   }
 
-  #foot-text{
+  .foot-text{
     color: #3D3D3D;
     text-decoration: none;
     font-family: Apple;
@@ -1307,7 +1339,7 @@ header{
     transition-timing-function: ease-in-out;
     transition-duration: 200ms;
   }
-  #foot-text:hover{
+  .foot-text:hover{
     opacity: 0.5;
   }
 
@@ -1334,7 +1366,7 @@ header{
     font-family: Inter-Bold;
   }
 
-#foot-pro{
+.foot-pro{
     color: #3D3D3D;
     
     flex: none;
@@ -1763,6 +1795,11 @@ header{
 .picture-gallery h2{
     grid-column: 1/4;
     grid-row: 1;
+}
+
+#image1 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
 }
 
 .image-gallery {
